# BrowserCraft

./: .gitignore  CMakeLists.txt  README.md  generate_new_textures.py  generate_textures.py  index.html  package.json  tsconfig.json  vcpkg.json
assets/: blocks.json
cpp-voxel/: CMakeLists.txt
cpp-voxel/src/game/: GameSession.cpp  GameSession.hpp
cpp-voxel/src/ui/: UIManager.cpp
cpp-voxel/src/world/: BlockDefinition.hpp  BlockRegistry.cpp
cpp-voxel/tests/: main.cpp  test_entity_manager.cpp  test_system_manager.cpp  test_thread_pool.cpp
docs/: README.md  audioEngine.md  biome-system.md  character-creation.md  chunk-and-worker-lifecycle.md  chunkSerializationAndSaveAndLoad.md  content-extension-guide.md  controls.md  craftingAndInventory.md  dayAndNightCycle.md  flora-system.md  implementation-architecture.md  input-ui-inventory-flow.md  instructions.md  item-transformations.md  items-system.md  lighting.md  menu.md  mobsAndBlocks.md  optimization.md  particleSystem.md  physicsAndCollisionDetection.md  redstone.md  rendering-pipeline.md  rpg-vision.md  save-system.md  smooth-terrain-proposal.md  stat-system.md  structures.md  testing.md  worldgeneration.md
notes/: chunk-border-light-seams.md  chunk-pending-queue-stability.md  chunk-shadow-banding.md  chunk-slot-mapping-stability.md  daynight-sun-tint.md  imGui-manual-callback-forwarding.md  imGui-window-user-pointer-conflict.md  indirect-draw-base-instance.md  mesher-capacity-accounting.md  render-distance-budget.md  renderer-cpu-command-fallback.md  renderer-culling-fallback.md  renderer-slot-index-bounds.md  world-generation-registered-ids.md  world-switch-stale-callbacks.md  worldgen-threadsafe-chunk-rng.md
scratch/: rename_namespaces.py  update_docs.py
scripts/: convert-textures-to-16bit.sh  rebuild-and-launch.sh  serve.mjs
src/: main.cpp  main.ts  pch.hpp
src/content/audio/: AudioRegistry.ts
src/content/biomes/: Biome.hpp  BiomeClassifier.cpp  BiomeClassifier.hpp  BiomeData.hpp  BiomeFactory.cpp  BiomeFactory.hpp  BiomeRegistry.ts  BiomeSampler.cpp  BiomeSampler.hpp  BiomeSurfaceRule.ts  Desert.ts  Forest.ts  IClimateSource.hpp  Mountains.ts  Plains.ts  Swamp.ts
src/content/crafting/: CraftingRegistry.ts
src/content/flora/: DefaultFlora.cpp  DefaultFlora.hpp  FloraCategoryFactory.hpp  FloraRegistry.cpp  FloraRegistry.hpp  FloraTypes.hpp  GrassFactory.cpp  GrassFactory.hpp
src/content/mobs/: MobFactory.ts
src/content/structures/: StructureBlueprint.ts  StructureDefinitions.ts  StructureRegistry.ts  VillagePlanner.ts
src/engine/alloc/: LockFreeRingBuffer.cpp  LockFreeRingBuffer.hpp  LockFreeRingBuffer.ts  RingBuffer.hpp  RingBuffer.ts  ScratchArena.hpp  ScratchArena.ts  SharedPool.cpp  SharedPool.hpp  SharedPool.ts  TypedArrayPool.cpp  TypedArrayPool.hpp  TypedArrayPool.ts
src/engine/assets/: AssetManager.cpp  AssetManager.hpp  TexturePipeline.ts
src/engine/audio/: AudioEngine.cpp  AudioEngine.hpp  AudioNodePool.ts
src/engine/collision/: EntityCollisions.cpp  EntityCollisions.hpp  EntityCollisionsMovement.cpp  MovementSolver.cpp  MovementSolver.hpp
src/engine/core/: Config.hpp  Config.ts  ConfigDefaults.hpp  EventBus.hpp  EventBus.ts  GameLoop.cpp  GameLoop.hpp  GameLoop.ts  GameState.hpp  GameState.ts  InputCallbackBridge.cpp  InputCallbackBridge.hpp  InputState.cpp  InputState.hpp  InputState.ts  RenderDistanceLimits.hpp  TickContext.hpp
src/engine/ecs/: ComponentStore.hpp  ComponentStore.ts  EntityManager.cpp  EntityManager.hpp  EntityManager.ts  Query.hpp  Query.ts  SystemManager.cpp  SystemManager.hpp  SystemManager.ts  TagStore.hpp
src/engine/math/: AABB.cpp  AABB.hpp  AABB.ts  Frustum.cpp  Frustum.hpp  Frustum.ts  mat4.ts  vec3.ts
src/engine/render/: Camera.ts  CameraView.hpp  CameraView.ts  ChunkMesh.cpp  ChunkMesh.hpp  ChunkMesh.ts  ChunkMeshAllocator.cpp  ChunkMeshAllocator.hpp  ChunkSyncer.cpp  ChunkSyncer.hpp  DrawDispatcher.cpp  DrawDispatcher.hpp  Framebuffer.ts  FrustumCuller.ts  IndirectBatcher.hpp  MultiDrawBatcher.ts  PersistentBuffer.hpp  Renderer.cpp  Renderer.hpp  Renderer.ts  ShaderProgram.cpp  ShaderProgram.hpp  ShaderProgram.ts  Texture2DArray.cpp  Texture2DArray.hpp  Texture2DArray.ts  UniformBuffer.cpp  UniformBuffer.hpp  UniformBuffer.ts  (+8 more)
src/game/: BlockInteractionAudio.hpp  BlockInteractionAudio.ts  ChunkWorkerImpl.cpp  ChunkWorkerImpl.hpp  Game.cpp  Game.hpp  Game.ts  GameMode.hpp  GameOrchestrator.cpp  GameOrchestrator.hpp  GameSession.cpp  GameSession.hpp  GameSession.ts  InputState.ts  PlayerBootstrap.ts  PlayerController.ts  PlayerInteractionController.ts  WorldController.cpp  WorldController.hpp
src/ui/: InventoryHud.ts  UIManager.cpp  UIManager.hpp  UIManager.ts
src/world/: BlockDefinition.hpp  BlockFactory.hpp  BlockFactory.ts  BlockIds.hpp  BlockRaycast.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockRegistry.ts  Chunk.cpp  Chunk.hpp  Chunk.ts  ChunkColumn.ts  ChunkCoords.hpp  ChunkJobQueue.cpp  ChunkJobQueue.hpp  ChunkManager.cpp  ChunkManager.hpp  ChunkManager.ts  ChunkSection.ts  ChunkTypes.hpp  IChunkPersistence.hpp  IChunkWorker.hpp  RemeshScheduler.hpp  VanillaBlocks.ts  VoxelStore.cpp  VoxelStore.hpp  World.cpp  World.hpp  World.ts  WorldCoords.hpp
tests/: MockWorker.hpp  crafting-system.test.mjs  frustum-culler.test.mjs  game-session.test.mjs  greedy-mesher-light.test.mjs  inventory-controller.test.mjs  player-interaction.test.mjs  redstone-system.test.mjs  save-format.test.mjs  save-worker.test.mjs  test_aabb.cpp  test_biome_sampler.cpp  test_block_registry.cpp  test_component_store.cpp  test_entity_manager.cpp  test_flora.cpp  test_frustum.cpp  test_lockfree_queue.cpp  test_mesher.cpp  test_player_controller.cpp  test_query.cpp  test_ring_buffer.cpp  test_save_manager.cpp  test_save_services.cpp  test_scratch_arena.cpp  test_shared_pool.cpp  test_simplex_noise.cpp  test_smooth_terrain_mesher.cpp  test_surface_nets_mesher.cpp  test_system_manager.cpp  test_terrain_physics.cpp  test_thread_pool.cpp  test_vanilla_block_factory.cpp  test_world.cpp  test_worldgen.cpp  time-system.test.mjs  world-lifecycle.test.mjs  world-remesh.test.mjs
(+135 files in other folders)
